--- a/public/css/style.css
+++ b/public/css/style.css
@@ -607,6 +607,7 @@ body {
   overflow-x: scroll;
   -ms-scroll-snap-type: x mandatory;
   scroll-snap-type: x mandatory;
+  overflow: hidden;
 }
 .reviews__card {
   width: 30rem;
@@ -888,7 +889,6 @@ body {
 .nav--user {
   -webkit-box-flex: 0;
   -ms-flex: 0 1 40%;
-  flex: 0 1 40%;
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end;
