--- a/views/base.pug
+++ b/views/base.pug
@@ -1,16 +1,22 @@
 doctype html
 html
   head
-    head
-      link(rel="stylesheet", href="css/style.css")
+    block head
+      link(href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet')
+      link(rel="stylesheet", href="/css/style.css")
       link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
       link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
-      title Natours || #{tour}
+      title Natours | #{title}
   
   body
-    h1=tour
-    h2=user.toUpperCase()
+    include _header
 
-    -const x = 9
-    h1=x
-    p This actually works     
+
+    block content
+      h1 This is a placeholder heading
+
+
+    include _footer
+    script(src='/js/mapbox.js')
+    script(src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js')
+    
