--- a/views/base.pug
+++ b/views/base.pug
@@ -2,7 +2,6 @@ doctype html
 html
   head
     block head
-      link(href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet')
       link(rel="stylesheet", href="/css/style.css")
       link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
       link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
@@ -17,6 +16,7 @@ html
 
 
     include _footer
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js')
     script(src='/js/mapbox.js')
-    script(src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js')
+    script(src='/js/login.js')
     
