--- a/views/tour.pug
+++ b/views/tour.pug
@@ -4,6 +4,7 @@ block append head
     script(src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js')
     link(href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet')
 
+    //- script(src='/js/mapbox.js')
 
 
 include _reviewCard
