--- a/views/email/passwordReset.pug
+++ b/views/email/passwordReset.pug
@@ -1,8 +1,8 @@
 extends baseemail
 block content 
   p Hi #{firstName},
-  p Welcome to Natours, we're glad to have you 🎉🙏
-  p We're all a big familiy here, so make sure to upload your user photo so we get to know you a bit better!
+  p  Fortgot your passwords ? Submit a patch request with your new password and password confint to : #{url};
+  p Website for this action not yet implenented
   table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
     tbody
       tr
@@ -11,6 +11,6 @@ block content
             tbody
               tr
                 td
-                  a(href=`${url}`, target='_blank') Upload user photo
+                  a(href=`${url}`, target='_blank') reset your password
   p If you need any help with booking your next tour, please don't hesitate to contact me!
   p - Jonas Schmedtmann, CEO
